# Holine

./: .gitignore  LICENSE  README.md  git.md
dev/ep00/source/: CMakeLists.txt  cpp20.cpp
dev/episoid/source/: cpp20.cpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/private/: holineclient.cpp
src/client/public/: holineclient.h
src/client/template/: clientversion.in
src/server/: CMakeLists.txt
src/server/private/: holineserver.cpp
src/server/template/: serverversion.in
